# MLX-Pilot

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_DEV.md  build_errors.txt  build_errors_again.txt  build_errors_agent_core.txt  build_errors_wsp.txt  changelog.md  changelog_users.md  check_err.txt  check_output.txt  clippy.txt  daemon_err.txt  error.txt  test_err.txt  test_output.txt
AI_FOR_MLX_PILOT/REPORTS/: 08_security_enterprise.md
apps/desktop-ui/: package-lock.json  package.json
apps/desktop-ui/e2e/: agent-control-plane.test.js  channels-smoke.test.js  skills-smoke.test.js
apps/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-ui/src-tauri/icons/: icon.icns
apps/desktop-ui/src-tauri/src/: main.rs
apps/desktop-ui/ui/: agent-channels.js  agent-control-plane.js  agent-skills.js  app.js  index.html  particles.js  styles.css
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent_loop.rs  approval.rs  audit.rs  context_budget.rs  events.rs  lib.rs  memory.rs  policy.rs  prompt_builder.rs  registry.rs  runtime.rs  session.rs  tool_catalog.rs
crates/agent-skills/: Cargo.toml
crates/agent-skills/src/: frontmatter.rs  lib.rs  loader.rs  resolver.rs  types.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: lib.rs  sandbox.rs  tool.rs  types.rs
crates/agent-tools/src/tools/: edit_file.rs  exec.rs  list_dir.rs  mod.rs  read_file.rs  write_file.rs
crates/bench_agent/: Cargo.toml
crates/bench_agent/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: agent_api.rs  agent_runtime_tools.rs  catalog.rs  chat_stream.rs  config.rs  lib.rs  main.rs  openclaw.rs  secrets_vault.rs
crates/daemon/src/channels/: mod.rs  protocol.rs
crates/daemon/src/plugins/: mod.rs
crates/providers/http_llm_provider/: Cargo.toml
crates/providers/http_llm_provider/src/: lib.rs
crates/providers/llamacpp/: Cargo.toml
crates/providers/llamacpp/src/: lib.rs
crates/providers/mlx/: Cargo.toml
crates/providers/mlx/src/: lib.rs
crates/providers/ollama/: Cargo.toml
crates/providers/ollama/src/: lib.rs
docs/: agent_architecture.md  channel-bridge-protocol-v1.md  channel-transports.md  openclaw-compat-report.json  openclaw-compat-report.md  openclaw-compatible-mode.md  release-gate-report.json  release-gate-report.md  skills-validation-report.md
scripts/: mlx_airllm_bridge.py  openclaw-compat-smoke.mjs  run-desktop.sh  skills-smoke.mjs  stop-daemon.sh
scripts/release-gate/: _lib.mjs  channels-real-validation.mjs  crash-recovery-smoke.mjs  load-smoke.mjs  migration-upgrade-rollback.mjs  release-dry-run-checklist.mjs  run-all.mjs  security-audit-smoke.mjs
