[workspace]
members = [
  "crates/core",
  "crates/providers/mlx",
  "crates/providers/llamacpp",
  "crates/providers/ollama",
  "crates/providers/http_llm_provider",
  "crates/daemon",
  "crates/bench_agent",
  # Agent crates
  "crates/agent-core",
  "crates/agent-tools",
  "crates/agent-skills",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
glob-match = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "process", "time", "fs", "sync", "net", "io-util"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
