[workspace]
members = [
  "crates/core",
  "crates/providers/mlx",
  "crates/daemon"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "process", "time", "fs", "sync", "net"] }
tracing = "0.1"
