[package]
name = "mlx-agent-skills"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
sha2 = "0.10"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
