[package]
name = "mlx-ollama-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = "0.8"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
shell-words = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
urlencoding = "2.1"
futures-util = "0.3"
bytes = "1"
tokio-stream = "0.1"
mlx-ollama-core = { path = "../core" }
mlx-agent-core = { path = "../agent-core" }
mlx-agent-tools = { path = "../agent-tools" }
mlx-agent-skills = { path = "../agent-skills" }
mlx-provider = { path = "../providers/mlx" }
llamacpp-provider = { path = "../providers/llamacpp" }
ollama-provider = { path = "../providers/ollama" }
http-llm-provider = { path = "../providers/http_llm_provider" }
