[package]
name = "http-llm-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
mlx-ollama-core = { path = "../../core" }
uuid = { version = "1", features = ["v4"] }
